# ODreams

./: Makefile.in  README.md  configure  configure.ac  exemple.conf  mkinstalldirs
aide/: aide
include/: add_info.h  admin_chan.h  admin_cmds.h  admin_manage.h  admin_user.h  aide.h  chanopt.h  chanserv.h  config.h  cs_register.h  data.h  debug.h  del_info.h  divers.h  fichiers.h  hash.h  lang.h  main.h  mylog.h  operserv.h  os_cmds.h  outils.h  serveur.h  showcommands.h  socket.h  structs.h  timers.h
src/: Makefile.in  add_info.c  admin_chan.c  admin_cmds.c  admin_manage.c  admin_user.c  aide.c  ban.c  chaninfo.c  chanopt.c  chanserv.c  config.c  convertdb  convertdb.c  cs_register.c  debug.c  del_info.c  divers.c  fichiers.c  flood.c  hash.c  hash_chan.c  hash_cmd.c  hash_nick.c  hash_user.c  main.c  match.c  moduser.c  mylog.c  nickserv.c  opdeop.c  operserv.c  os_cmds.c  outils.c  serveur.c  showcommands.c  socket.c  timers.c  userinfo.c
